# helicase

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: docs.yml  tests.yml
bench/: Cargo.toml
bench/examples/: validate.rs
bench/src/: main.rs
helicase/: Cargo.toml
helicase/examples/: minimal.rs  packed.rs
helicase/src/: carrying_add.rs  config.rs  input.rs  lib.rs
helicase/src/dna_format/: columnar.rs  mod.rs  packed.rs
helicase/src/lexer/: fasta.rs  fastq.rs  mod.rs  traits.rs
helicase/src/parser/: fasta.rs  fastq.rs  fastx.rs  mod.rs  traits.rs
helicase/src/simd/: avx2.rs  fallback.rs  neon.rs
