[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[dependencies]
needletail = { version = "0.6", default-features = false, features = [
    "flate2",
    "zstd",
] }
paraseq = { version = "0.4", default-features = false, features = ["niffler"] }
rayon = "1"
regex = "1.11"
helicase = { path = "../helicase" }
