[package]
name = "helicase"
version = "0.1.0"
edition = "2024"
authors = ["Igor Martayan <imartayan@users.noreply.github.com>"]
description = "SIMD-accelerated parser for FASTA and FASTQ files"
keywords = ["bioinformatics", "fasta", "fastq", "parser", "simd"]
license = "MIT"

[dependencies]
deko = { version = "0.5", default-features = false }
memmap2 = "0.9"

[features]
default = ["gz", "zstd"]
bz2 = ["deko/bzip2"]
gz = ["deko/flate2"]
xz = ["deko/xz"]
zstd = ["deko/zstd"]
